syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.ot5";
option java_outer_classname = "KeyManagerGRPC";


package br.com.zup.ot5;

service KeyManagerRegistraService {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service KeyManagerExcluiService {
  rpc excluiChavePix (ExcluiChavePixRequest) returns (ExcluiChavePixResponse) {}
}

service KeyManagerConsultaService {
  rpc consultaChavePix (ConsultaChavePixRequest) returns (ConsultaChavePixResponse) {}
}

service KeyManagerListaService {
  rpc listaChavePix (ListaChavePixRequest) returns (ListaChavePixResponse) {}
}

service ExternalServicesConsultaService {
  rpc consultaChavePix (ConsultaChavePixExternalRequest) returns (ConsultaChavePixExternalResponse) {}
}

message RegistraChavePixRequest {
  string idTitular = 1;
  TipoChave tipoChave = 2;
  TipoConta tipoConta = 3;
  string valorChave = 4;
}

message ConsultaChavePixExternalRequest{
  string valorChave = 1;
}

message ConsultaChavePixExternalResponse{
  optional string pixId = 1;
  optional string idTitular = 2;
  TipoChave tipoChave = 3;
  string valorChave = 4;
  string nomeTitular = 5;
  string cpfTitular = 6;
  string instituicaoConta = 7;
  string ispb = 8;
  string agencia = 9;
  string numero = 10;
  TipoConta tipoConta = 11;
  string criadaEm = 12;
}

message ConsultaChavePixRequest{
  string idTitular = 1;
  string pixId = 2;
}

message ConsultaChavePixResponse{
  string pixId = 1;
  string idTitular = 2;
  TipoChave tipoChave = 3;
  string valorChave = 4;
  string nomeTitular = 5;
  string cpfTitular = 6;
  string instituicaoConta = 7;
  string ispb = 8;
  string agencia = 9;
  string numero = 10;
  TipoConta tipoConta = 11;
  string criadaEm = 12;
}

message ListaChavePixRequest{
  string idTitular = 1;
}

message ListaChavePixResponse{
  repeated ResumoChavePix chaves = 1;
}

message ResumoChavePix{
  string pixId = 1;
  string idTitular = 2;
  TipoChave tipoChave = 3;
  string valorChave = 4;
  TipoConta tipoConta = 5;
  string criadaEm = 6;
}

message RegistraChavePixResponse {
  string idTitular = 1;
  string pixId = 2;
}

message ExcluiChavePixRequest {
  string idTitular = 1;
  string pixId = 2;
}

message ExcluiChavePixResponse{}

enum TipoChave{
  TIPO_CHAVE_DESCONHECIDO = 0;
  CPF = 1;
  TELEFONE_CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta{
  TIPO_CONTA_DESCONHECIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}